[workspace]
resolver = "2"
members = [
    "crates/rustybasic-common",
    "crates/rustybasic-lexer",
    "crates/rustybasic-parser",
    "crates/rustybasic-sema",
    "crates/rustybasic-codegen",
    "crates/rustybasic-driver",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
rustybasic-common = { path = "crates/rustybasic-common" }
rustybasic-lexer = { path = "crates/rustybasic-lexer" }
rustybasic-parser = { path = "crates/rustybasic-parser" }
rustybasic-sema = { path = "crates/rustybasic-sema" }
rustybasic-codegen = { path = "crates/rustybasic-codegen" }

logos = "0.14"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
thiserror = "2"
anyhow = "1"
inkwell = { version = "0.5", features = ["llvm18-0", "target-riscv"] }
insta = "1"
