[package]
name = "rustybasic-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
rustybasic-common = { workspace = true }
rustybasic-parser = { workspace = true }
rustybasic-sema = { workspace = true }
inkwell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rustybasic-lexer = { workspace = true }
insta = { workspace = true }
